<resources>
    <string name="app_name">RajaTec</string>
    <string name="apps">Apps</string>
    <string name="hardware">Hardware</string>
    <string name="home">Home</string>
    <string name="mobiles">Mobiles</string>
    <string name="accessories">Accessory</string>
    <string name="to_make_sure">To make sure that this device is guaranteed by Rajatec just press check button or insert any other device IMEI and press check.</string>
    <string name="enter_imei_code_here">Enter IMEI code here</string>
    <string name="check">Check</string>
    <string name="gallery">Gallery</string>
    <string name="warranty">Warranty</string>
    <string name="offers">Offers</string>
    <string name="feedback">Contact us</string>
    <string name="branches">Branches</string>
    <string name="term_and_conditions">Term and conditions</string>
    <string name="join_us_on_facebook">Join us on Facebook</string>
    <string name="smartAccessort">Smart Accessories</string>
    <string name="last_update_seting">Prices last update:</string>
    <string name="termsAndConditions">
تقدم شركة سامسونج خدمة الضمان لجميع منتجاتها  المختلفة\n
وفيما يلي وصف للخدمات المقدمة للأجهزة الخلوية\n
تحمل منتجات سامسونج ضماناً كاملاً للمدة المحددة – سنة واحدة\n
البنود والشروط العامة:\n\n
1-      يسري الضمان في الجمهورية العربية السورية للأجهزة الخلوية فقط من رجا تك حصراً المطابق لطراز المنتج ورقمه التسلسلي\n\n
2-      تقتصر التزامات شركة سامسونج على اصلاح العيب أو استبدال الجزء المعيب أو استبدال المنتج نفسه كما تجده مناسباً\n\n
3-      يجب أن تتم عمليات الإصلاح بموجب الضمان من قبل مركز معتمد لخدمة سامسونج,تكون تغطية الضمان ملغاة في حال كانت هناك محاولة اصلاح بواسطة مركز خدمة غير معتمد , لا تتحمل شركة سامسونج مسؤولية أي تعويضات أو دعاوى أو أضرار قد تنتج عن أي اصلاح غير معتمد للمنتج\n\n
4-      لا يمنح الإصلاح بموجب بنود هذا الضمان حق مد أو تجديد مدة الضمان , يمكن أن يتم التصليح المباشر للمنتج بموجب بنود هذا الضمان\n\n
5-      هذا الضمان غير قابل للتحويل, يعتبر هذا الضمان هو التعويض الوحيد والحصري للمشترين ولا تتحمل شركة سامسونج أو أي من مراكز الخدمة المدرجة في وثيقة الضمان هذه مسؤولية أي أضرار عرضية أو تبعية أ خرق لأي ضمان صريح أو ضمني لهذا المنتج
اخلاء المسؤولية : لا تتحمل شركة سامسونج مسؤولية فقدان أي من البيانات المحفوظة / المخزنة في المنتجات التي يتم إصلاحها أو استبدالها\n\n
6-      لا يسري الضمان على أي حالات أخرى غير العيوب في المواد والتصميم والتصنيع\n\n
7-      لا يغطي الضمان الكابلات والبطاريات\n\n
لا يغطي الضمان ما يلي:\n\n
·         الفحوصات الدورية والصيانة والإصلاح والاستبدال للاجزاء نتيجة للتلف أو البلى الناتج عن الاستعمال العادي\n\n
·         إساءة الاستخدام او الاستخدام الخاطئ ويشمل ذلك على سبيل المثال لا الحصر , الفشل في استخدام هذا المنتج لاغراضه العادية أو بما يتوافق مع إرشادات الاستخدام والصيانة الخاصة بسامسونج , العيوب الناتجة عن استخدام المنتج مع ملحقات لم يتم اعتمادها من قبل سامسونج للاستخدام مع هذا المنتج\n\n
·         تلف المنتج نتيجة التركيب غير الصحيح أو استخدامه بطريقة غير متوافقة مع الارشادات أو المعايير الفنية أو معايير الأمان الموضحة في دليل المستخدم الخاص بالمنتج\n\n
·         الحواد او الكوارث الطبيعية أ, البرق أو المياه أو الحريق أو الاضطربات العامة أو التهوية غير الصحيحة او تقلبات الجهد\n\n
·         التعديلات غير المعتمدة التي تتم على المنتج ليتوافق مع المعايير التقنية المحلية أو الدولية في الدول التي لم يتم تصميم منتج سامسونج بها أصلاً\n\n
·         تلف البطارية بسبب الشحن المفرط أو الفشل في الاستخدام وفقاً للتعليمات الأساسية المحددة والموضحة في دليل المستخدم الخاص بهذا المنتج , تبديل أو حذف أو إزالة أو تعذر قراءة الرقم التسلسلي الموجود على المنتج\n\n
·         شحن البطاريات بشواحن غير الشواحن المعتمدة من قبل سامسونج\n\n
·         حدوث كسر أو ضهور أثار للعبث بالاختام الموجودة على حاوية البطارية او خلاياها\n\n

\n\n\n
السياسات المذكورة أعلاه خاصة بخدمة الضمان ويكون العميل مسؤولاً عن أي تكاليف متعلقة بحالات لا يغطيها الضمان ,
تحتفظ شركة سامسونج بالحق في اتخاذ قرارات نهائية بشأن تحديد المشكلة وخيار الخدمة المناسب
تتولى وحدات التبادل الضمان المتبقي للمنتج الأصلي , يرجى الرجوع الى بيان الضمان المحدود لشركة سامسونج لمعرفة البنود والشروط الكاملة , حيث ان بعض الطرز تشتمل على بنود وشروط مختلفة , تنطبق بعض الحدود والقيود وتخضع هذه البرامج للتغير دون سايق انذار\n
\n\n

معلومات الضمان:\n

1-      تتم عمليات الإصلاح او الاستبدال من خلال مراكز خدمة الشركة (راجع القائمة) أو مراكز الخدمة المعتمدة أو مراكز موزعيها\n\n
2-      في حال أي اصلاح / استبدال أي جزء / أجزاء من الجهاز , يكون الضمان مستمراً بعد ذلك ويظل سارياً بعد ذلك لمدة الضمان غير المنتهية فقط . علاوةً على ذلك لم يتم اسثثناء الوقت المستغرق في الإصلاح /الاستبدال وفي النقل , سواء بموجب الضمان أم لا , من فترة الضمان\n\n
3-      تحتفظ الشركة أو مركز الخدمة / موزع الخدمة المعتمد بحق الاحتفاظ باي جزء أو أجزاء أو مكون / مكونات يتم استبدالها كما يتراءى لها في حالة ملاحظة عيب في الجهاز خلال فترة الضمان\n\n
4-      يستمر الضمان للفترة غير المنتهية بعد فحص المنتج من قبل  مركز الخدمة المعني والتأكد من أن المنتج خالي من تلفيات  النقل\n\n
5-      يكون على العميل دفع تكاليف الزيارة الخاصة بالفحص كما هو سار\n\n
6-      في حالة أي تلفيات ناتجة عن النقل يتم اصلاح المنتج بواسطة مركز الخدمة المعني على حسابه ويستمر الضمان للفترة غير المنتهية\n\n
8-      يكون التزام الشركة بموجب هذا الضمان مقصوراُعلى اصلاح او استبدال الجزء/الأجزاء التي اكتشف انها معيبة\n\n

9-      تتم الإصلاحات خلال فترة الضمان على أساس "النقل الى مراكز الخدمة " فحيثما تكون الخدمة يكون على المشتري 7\n\n-      لا يغطي الضمان الملحقات الخارجية للنظام
احضار المنتج الى مركز الخدمة الذي تم به تسجيل خدمة الضمان للجهاز , لا يغطي الضمان تكاليف نقل النظام الى مراكز الخدمة
\n\n
\n\n\n
يعتبر هذا الضمان غير سار في أي من الأحوال التالية:
1-      عدم وجود الرقم التسلسلي مع طراز المنتج داخل تطبيق رجا تك\n\n
2-      لم يتم استخدام المنتج وفقا للارشادات الموضحة في دليل الارشادات\n\n
3-      حدوث عيوب ناتجة عن استعمال غير مناسب وفقا لما يحدده موظفو الشركة\n\n
4-      تم اجراء الصلاح بواسطة اشخاص/ وكالة غير معتمدة من قبل الشركة\n\n
5-      حدوث تعديل او تغيير من أي نوع بالدائرى الكهربائية / او الهيكل المادي للجهاز\n\n
6-      عدم توافق ظروف الموقع (المكان الذي يتم الاحتفاظ بالمنتج فيه) مع ظروف تشغيل الجهاز الموصى بها\n\n
7-      إزالة الرقم التسلسلي الأصلي او طمسه او تغييره من على الجهاز او الخزانة\n\n
8-      حدوث عيوب ناتجة عن أسباب خارج نطاق السيطرة كالبرق او جهد كهربائي غير طبيعي او احداث قدرية او اثناء النقل\n\n
</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="enter_your_mobile">Enter your mobile number</string>
    <string name="message">Message</string>
    <string name="enter_your_message">Enter your message here</string>
    <string name="submit">Submit</string>
    <string name="congrads" >Congratulations</string>
    <string name="feedback_successfully">Successfuly submitted to our support side</string>
    <string name="thanks">Thanks!</string>
    <string name="cannotBeLessThan10">Cannot be less than 10 characters</string>
    <string name="cannotBeEmpty">Cannot be empty</string>
    <string name="sorry">Sorry!</string>
    <string name="pleaseWaitTillTheOtherIsStaring">There is other app in download progress, please wait or till the old one is finished or stop the download.</string>
    <string name="pendding">Pendding . . .</string>
    <string name="resume">Resume</string>
    <string name="Download">download</string>
</resources>
