<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header_rel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#ffffff">

        <RelativeLayout
            android:id="@+id/top_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:background="#ffffff"
            android:layoutDirection="ltr">

            <RelativeLayout
                android:id="@+id/menu_icon_container"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:visibility="gone">

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_marginBottom="35dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="20dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_menu"
                    android:tint="#ff0000" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/search_icon_container"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_marginBottom="35dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="20dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_close"
                    android:tint="#ff0000" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/sp_icon_main" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="#cccccc"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/top_bar_layout"
            android:background="#ffffff"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/enter_your_"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:textColor="#000000"
                    android:text="@string/name" />


                <EditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/enter_your_"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="5dp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/mobile_edit_text"
                    android:hint="@string/enter_your_name"
                    android:textSize="13sp" />


                <TextView
                    android:id="@+id/enter_your_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/name_edit_text"
                    android:textColor="#000000"
                    android:text="@string/mobile" />


                <EditText
                    android:id="@+id/mobile_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/enter_your_mobile"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="3dp"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/enter_your_mobile"
                    android:textSize="13sp" />






                <TextView
                    android:id="@+id/enter_your_message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/mobile_edit_text"
                    android:textColor="#000000"
                    android:text="@string/message" />


                <EditText
                    android:id="@+id/message_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/enter_your_message"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="3dp"
                    android:lines="3"
                    android:minLines="3"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/enter_your_message"
                    android:textSize="13sp" />


                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:textSize="13sp"
                    android:layout_marginRight="40dp"
                    android:layout_below="@+id/message_edit_text"
                    android:layout_marginTop="30dp"
                    android:text="@string/submit"
                    android:textColor="#000000"/>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>